--- a/cw1/questions.ipynb
+++ b/cw1/questions.ipynb
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,10 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return torch.sum(torch.abs(self.weights))\n",
+    "        weight_penalty = 0\n",
+    "        for param in self.parameters():\n",
+    "            weight_penalty += torch.sum(torch.abs(param))\n",
+    "        return weight_penalty\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -194,7 +197,10 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return torch.sum(self.weights ** 2)\n",
+    "        weight_penalty = 0.0\n",
+    "        for param in self.parameters():\n",
+    "            weight_penalty += torch.sum(param ** 2)\n",
+    "        return weight_penalty\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n"
@@ -202,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -210,12 +216,12 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: training...\n",
-      "Train set:\tAverage loss: 0.5640, Accuracy: 0.8684\n",
+      "Train set:\tAverage loss: 0.5640, Accuracy: 0.8682\n",
       "Validation set:\tAverage loss: 0.3583, Accuracy: 0.9018\n",
       "\n",
       "Epoch 1: training...\n",
-      "Train set:\tAverage loss: 0.3301, Accuracy: 0.9093\n",
-      "Validation set:\tAverage loss: 0.3085, Accuracy: 0.9123\n",
+      "Train set:\tAverage loss: 0.3301, Accuracy: 0.9094\n",
+      "Validation set:\tAverage loss: 0.3085, Accuracy: 0.9125\n",
       "\n",
       "Epoch 2: training...\n",
       "Train set:\tAverage loss: 0.3001, Accuracy: 0.9164\n",
@@ -223,11 +229,11 @@
       "\n",
       "Epoch 3: training...\n",
       "Train set:\tAverage loss: 0.2860, Accuracy: 0.9203\n",
-      "Validation set:\tAverage loss: 0.2819, Accuracy: 0.9192\n",
+      "Validation set:\tAverage loss: 0.2819, Accuracy: 0.9188\n",
       "\n",
       "Epoch 4: training...\n",
       "Train set:\tAverage loss: 0.2771, Accuracy: 0.9232\n",
-      "Validation set:\tAverage loss: 0.2787, Accuracy: 0.9198\n",
+      "Validation set:\tAverage loss: 0.2787, Accuracy: 0.9197\n",
       "\n",
       "Epoch 5: training...\n",
       "Train set:\tAverage loss: 0.2710, Accuracy: 0.9244\n",
@@ -235,21 +241,21 @@
       "\n",
       "Epoch 6: training...\n",
       "Train set:\tAverage loss: 0.2662, Accuracy: 0.9259\n",
-      "Validation set:\tAverage loss: 0.2725, Accuracy: 0.9215\n",
+      "Validation set:\tAverage loss: 0.2725, Accuracy: 0.9217\n",
       "\n",
       "Epoch 7: training...\n",
-      "Train set:\tAverage loss: 0.2626, Accuracy: 0.9270\n",
+      "Train set:\tAverage loss: 0.2626, Accuracy: 0.9269\n",
       "Validation set:\tAverage loss: 0.2684, Accuracy: 0.9248\n",
       "\n",
       "Epoch 8: training...\n",
       "Train set:\tAverage loss: 0.2593, Accuracy: 0.9278\n",
-      "Validation set:\tAverage loss: 0.2669, Accuracy: 0.9270\n",
+      "Validation set:\tAverage loss: 0.2669, Accuracy: 0.9272\n",
       "\n",
       "Epoch 9: training...\n",
-      "Train set:\tAverage loss: 0.2571, Accuracy: 0.9282\n",
+      "Train set:\tAverage loss: 0.2571, Accuracy: 0.9281\n",
       "Validation set:\tAverage loss: 0.2661, Accuracy: 0.9258\n",
       "\n",
-      "Test set:\tAverage loss: 0.2646, Accuracy: 0.9252\n",
+      "Test set:\tAverage loss: 0.2646, Accuracy: 0.9253\n",
       "\n"
      ]
     }
@@ -257,7 +263,7 @@
    "source": [
     "# *CODE FOR PART 3.2 IN THIS CELL - EXAMPLE WITH DEFAULT PARAMETERS PROVIDED *\n",
     "torch.manual_seed(0)\n",
-    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=0.0001)\n",
+    "model = MultinomialLogisticRegressionClassifier(weight_init_sd=0.001)\n",
     "res = run_experiment(\n",
     "    model,\n",
     "    optimizer=optim.Adam(model.parameters(), 0.001),\n",
@@ -299,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,8 +415,10 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return torch.sum(torch.abs(self.w0)) + torch.sum(torch.abs(self.w1)) + \\\n",
-    "                 torch.sum(torch.abs(self.w2)) + torch.sum(torch.abs(self.w3))\n",
+    "        weight_penalty = 0\n",
+    "        for param in self.parameters():\n",
+    "            weight_penalty += torch.sum(torch.abs(param))\n",
+    "        return weight_penalty\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n",
@@ -423,8 +431,10 @@
     "        #######################################################################\n",
     "        #                       ** START OF YOUR CODE **\n",
     "        #######################################################################\n",
-    "        return torch.sum(self.w0 ** 2) + torch.sum(self.w1 ** 2) + \\\n",
-    "                torch.sum(self.w2 ** 2) + torch.sum(self.w3 ** 2)\n",
+    "        weight_penalty = 0.0\n",
+    "        for param in self.parameters():\n",
+    "            weight_penalty += torch.sum(param ** 2)\n",
+    "        return weight_penalty\n",
     "        #######################################################################\n",
     "        #                       ** END OF YOUR CODE **\n",
     "        #######################################################################\n"
@@ -432,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -440,14 +450,47 @@
      "output_type": "stream",
      "text": [
       "Epoch 0: training...\n",
-      "Train set:\tAverage loss: 1.1019, Accuracy: 0.5900\n",
-      "Validation set:\tAverage loss: 0.4174, Accuracy: 0.8783\n",
+      "Train set:\tAverage loss: 1.7462, Accuracy: 0.3422\n",
+      "Validation set:\tAverage loss: 1.0299, Accuracy: 0.6028\n",
       "\n",
       "Epoch 1: training...\n",
-      "Train set:\tAverage loss: 0.3027, Accuracy: 0.9134\n",
-      "Validation set:\tAverage loss: 0.2098, Accuracy: 0.9380\n",
+      "Train set:\tAverage loss: 0.4546, Accuracy: 0.8591\n",
+      "Validation set:\tAverage loss: 0.2730, Accuracy: 0.9183\n",
       "\n",
-      "Epoch 2: training...\n"
+      "Epoch 2: training...\n",
+      "Train set:\tAverage loss: 0.2262, Accuracy: 0.9332\n",
+      "Validation set:\tAverage loss: 0.1921, Accuracy: 0.9440\n",
+      "\n",
+      "Epoch 3: training...\n",
+      "Train set:\tAverage loss: 0.1603, Accuracy: 0.9524\n",
+      "Validation set:\tAverage loss: 0.1499, Accuracy: 0.9545\n",
+      "\n",
+      "Epoch 4: training...\n",
+      "Train set:\tAverage loss: 0.1252, Accuracy: 0.9632\n",
+      "Validation set:\tAverage loss: 0.1416, Accuracy: 0.9578\n",
+      "\n",
+      "Epoch 5: training...\n",
+      "Train set:\tAverage loss: 0.0982, Accuracy: 0.9709\n",
+      "Validation set:\tAverage loss: 0.1116, Accuracy: 0.9655\n",
+      "\n",
+      "Epoch 6: training...\n",
+      "Train set:\tAverage loss: 0.0819, Accuracy: 0.9760\n",
+      "Validation set:\tAverage loss: 0.1102, Accuracy: 0.9670\n",
+      "\n",
+      "Epoch 7: training...\n",
+      "Train set:\tAverage loss: 0.0677, Accuracy: 0.9797\n",
+      "Validation set:\tAverage loss: 0.1227, Accuracy: 0.9633\n",
+      "\n",
+      "Epoch 8: training...\n",
+      "Train set:\tAverage loss: 0.0581, Accuracy: 0.9825\n",
+      "Validation set:\tAverage loss: 0.1214, Accuracy: 0.9658\n",
+      "\n",
+      "Epoch 9: training...\n",
+      "Train set:\tAverage loss: 0.0487, Accuracy: 0.9853\n",
+      "Validation set:\tAverage loss: 0.1115, Accuracy: 0.9693\n",
+      "\n",
+      "Test set:\tAverage loss: 0.1040, Accuracy: 0.9721\n",
+      "\n"
      ]
     }
    ],
@@ -457,11 +500,11 @@
     "model = MultilayerClassifier(activation_fun='relu', weight_init_sd=0.0001)\n",
     "res = run_experiment(\n",
     "    model,\n",
-    "    optimizer=optim.Adam(model.parameters(), 0.002),\n",
+    "    optimizer=optim.Adam(model.parameters(), 0.001),\n",
     "    train_loader=train_loader_0,\n",
     "    val_loader=val_loader_0,\n",
     "    test_loader=test_loader_0,\n",
-    "    n_epochs=9,\n",
+    "    n_epochs=10,\n",
     "    l1_penalty_coef=0.0000001,\n",
     "    l2_penalty_coef=0.0000001,\n",
     "    suppress_output=False\n",
